changed max_length parameter for field name Post model
